<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repositoryListViewModel"
            type="pl.nataliana.githubfinder.model.viewmodel.RepositoryListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_for_repositories"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/default_text_size_large"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_input_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner_repository"
            android:textSize="@dimen/default_text_size_medium" />

        <Button
            android:id="@+id/search_for_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_medium"
            android:background="@drawable/button_shape"
            android:text="@string/search"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/default_text_size_small" />

        <LinearLayout
            android:id="@+id/empty_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_large"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_search_repositories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_medium"
                android:gravity="center"
                android:text="@string/no_repositories_yet"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_text_size_small"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/previously_searched_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/default_margin_large"
            android:text="@string/previously_searched_repositories"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/default_text_size_medium"
            android:textStyle="bold"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/repo_item" />

    </LinearLayout>
</layout>



